--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@finos/perspective": "^1.6.2",
+    "@finos/perspective": "^1.9.4",
     "@finos/perspective-viewer": "^1.6.2",
     "@finos/perspective-viewer-d3fc": "^1.6.2",
     "@finos/perspective-viewer-datagrid": "^1.6.2",
@@ -13,9 +13,10 @@
     "@types/react-dom": "^16.0.11",
     "bootstrap": "^4.2.1",
     "puppeteer": "^1.19.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "2.1.3"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-scripts": "2.1.3",
+    "tsx": "^4.17.0"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
@@ -35,6 +36,6 @@
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
     "source-map-loader": "^0.2.4",
-    "typescript": "^3.2.4"
+    "typescript": "^3.9.10"
   }
 }
